Fixing payment problem and email sending about payment transactions